# architecture-patterns-with-python

./: .gitignore  pyproject.toml
abstraction/: sync.py  test_sync.py
src/: model.py  orm.py
test/: conftest.py  model.py  test_allocation.py  test_batches.py  test_orm.py  test_repository.py
